EPMEDUTOUR-10506[EPMEDUTOUR-11598]: UI issue: The name of the button 'Contact us' is shifted to the top when text resize 200% EPMEDUTOUR-10506[EPMEDUTOUR-11597]: Icon images for feedback from Google Play and App store are pronounced by screen reader EPMEDUTOUR-10506[EPMEDUTOUR-11599]: H3 'карманный помощник для путешествий по Беларуси" has double focus and pronounced separately when RU language is selected EPMEDUTOUR-10506[EPMEDUTOUR-11617]: ARIA attributes are not allowed for an element's role

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -42,6 +42,7 @@
     display: inline-flex;
     vertical-align: middle;
     align-items: center;
+    justify-content: center;
     height: 48px;
     padding: 0 40px;
     border: 0;
